# raxclaw-arbitrum

./: .gitignore  README.md  package.json  raxclaw.tsx
backend/: .env.example  Cargo.toml  LICENSE  Makefile  fly.toml
backend-typescript/src/: agent.ts  index.ts  openai-client.ts  qdrant-storage.ts  stylus-client.ts
backend/examples/: agent-example.ts  agent_example.rs
backend/src/: agent.rs  agent.ts  index.ts  lib.rs  openai_client.rs  qdrant_storage.rs  stylus_client.rs  tools.rs
contract-stylus/: Cargo.toml
contract-stylus/agent-memory/: Cargo.toml
contract-stylus/agent-memory/src/: lib.rs  main.rs
contract-stylus/audit-report/: Cargo.toml
contract-stylus/audit-report/src/: lib.rs  main.rs
frontend/: README.md  package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/api/rpc/: route.ts
frontend/app/tx-report/[hash]/: page.tsx
frontend/components/: ArchFlow.tsx  AuditExplorer.tsx  DownloadSection.tsx  HeroSection.tsx  LiveTerminal.tsx  MemorySection.tsx  Nav.tsx  StatsSection.tsx  TerminalShowcase.tsx  VerificationSection.tsx
frontend/lib/: contracts.ts
skills/raxc-security/: run.sh
stylus/: Cargo.toml  Makefile  README.md
stylus/caller/: Cargo.toml
stylus/src/: agent_memory.rs  audit_report.rs  counter.rs  lib.rs  main.rs
