[package]
name = "raxc"
version = "0.1.0"
edition = "2021"
authors = ["RAXC Team"]
description = "AI-Powered DeFi Smart Contract Vulnerability Scanner using RAG and 0G Infrastructure"
license = "MIT"
repository = "https://github.com/kongphop3212/raxc-0g-agent-framework"
homepage = "https://raxc-0g-agent-framework.vercel.app"
documentation = "https://github.com/kongphop3212/raxc-0g-agent-framework#readme"
readme = "README.md"
keywords = ["security", "defi", "smart-contracts", "vulnerability", "rag"]
categories = ["cryptography::cryptocurrencies", "development-tools", "web-programming"]
exclude = [
  "0g-cli",
  "target/",
  "reports/",
  ".DS_Store",
  "Dockerfile",
  "agent_analyze.sh",
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "ws_server"
path = "src/bin/ws_server.rs"

[[bin]]
name = "ws_client"
path = "src/bin/ws_client.rs"

[[bin]]
name = "api"
path = "src/bin/ari.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
reqwest        = { version = "0.11", features = ["json"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
dotenv         = "0.15"
regex          = "1"
chrono         = { version = "0.4",  features = ["clock"] }
anyhow         = "1"
urlencoding    = "2"
axum           = { version = "0.7", features = ["macros", "ws"] }
tower-http     = { version = "0.5", features = ["cors"] }
ethers         = { version = "2.0", features = ["abigen", "ws"] }
hex            = "0.4"
base64         = "0.21"
tempfile       = "3"
async-trait    = "0.1"
futures        = "0.3"
md5            = "0.7"
qdrant-client  = "1"
alloy          = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"